manifestos/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster
  labels:
    app: togglemaster
    environment: production
